[package]
name = "crontab-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
shuttle-axum = "0.16.0"
shuttle-crond = { version = "0.15.0", path = "../../services/shuttle-crond" }
shuttle-persist = "0.16.0"
shuttle-runtime = "0.16.0"
tokio = "1.28.0"
